working on overflow mobile scroll issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -88,6 +88,7 @@
   }
 
   html {
+    position: fixed;
     font-family: "Exo", sans-serif;
     height: 100%;
     background-color: black;
